feat: add sections 'help', 'in addition' and footer

--- a/shelter/shelter.html
+++ b/shelter/shelter.html
@@ -15,12 +15,12 @@
                     <a href="#not_only" class="logo_link">
                         <div class="title">Cozy House</div>
                     </a>
-                    <div class="subtitle">Shelter for pets in Boston</div>
+                    <h1 class="subtitle">Shelter for pets in Boston</h1>
                 </div>
                 <div class="navbar">
                     <ul class="navbar-list">
                         <li class="navbar-list-item">
-                            <a class="nav-link" href="#">About the shelter</a>
+                            <a class="nav-link first_link" href="#">About the shelter</a>
                         </li>
                         <li class="navbar-list-item">
                             <a class="nav-link" href="#pets">Our pets</a>
@@ -44,9 +44,7 @@
                     <p class="content_subheading">We offer to give a chance to a little and nice puppy with an extremely wide and open heart. He or she will love you more than anybody else in the world, you will see!</p>
                     <a href="#pets"><button class="make_a_friend">Make a friend</button></a>
                 </div>
-                <div class="not_only_puppy">
-                    <img src="/shelter/img/start-screen-puppy.svg" alt="start_puppy" class="start_puppy">
-                </div>
+                <img src="/shelter/img/start-screen-puppy.svg" alt="start_puppy" class="start_puppy">
             </div>
         </section>
         <section class="about" id="about">
@@ -55,8 +53,8 @@
                     <img src="/shelter/img/about-pets.svg" alt="pets" class="about_pets_img">
                 </div>
                 <div class="about_content">
-                    <h2 class="about_heading">About the shelter<br />
-                        “Cozy House”</h2>
+                    <h3 class="about_heading">About the shelter<br />
+                        “Cozy House”</h3>
                     <p class="about_subheading">Currently we have 121 dogs and 342 cats on our hands and statistics show that only 20% of them will find a family. The others will continue to live with us and will be waiting for a lucky chance to become dearly loved.</p>
                     <p class="about_subheading">We feed our wards with the best food and make sure that they do not get sick, feel comfortable (including psychologically) and well. We are supported by 87 volunteers and 28 employees of various skill levels. About 12% of the animals are taken by the shelter staff. Taking care of the animals, they become attached to the pets and would hardly ever leave them alone.</p>
                 </div>
@@ -64,8 +62,8 @@
         </section>
         <section class="pets" id="pets">
             <div class="pets_content wrapper">
-                <div class="pets_heading">Our friends who <br />
-                are looking for a house</div>
+                <h3 class="pets_heading">Our friends who <br />
+                are looking for a house</h3>
                 <div class="carousel">
                     <button class="arrow_back">
                         <img src="/shelter/img/arrow_back.svg" alt="button_arrow_back" class="arrow button_arrow_back">
@@ -92,6 +90,93 @@
                 <button class="rest_pets">Get to know the rest</button>
             </div>
         </section>
+        <section class="help" id="help">
+            <div class="help-content wrapper">
+                <h3 class="help_heading">How you can help <br /> our shelter</h3>
+                <div class="help_list">
+                    <div class="help_list_card">
+                        <img src="/shelter/img/icons/icon-pet-food.svg" alt="pet-food" class="help_item">
+                        <h4 class="help_name">Pet food</h4>
+                    </div>
+                    <div class="help_list_card">
+                        <img src="/shelter/img/icons/icon-transportation.svg" alt="transportation" class="help_item">
+                        <h4 class="help_name">Transportation</h4>
+                    </div>
+                    <div class="help_list_card">
+                        <img src="/shelter/img/icons/icon-toys.svg" alt="toys" class="help_item">
+                        <h4 class="help_name">Toys</h4>
+                    </div>
+                    <div class="help_list_card">
+                        <img src="/shelter/img/icons/icon-bowls-and-cups.svg" alt="bowls-and-cups" class="help_item">
+                        <h4 class="help_name">Bowls and cups</h4>
+                    </div>
+                    <div class="help_list_card">
+                        <img src="/shelter/img/icons/icon-shampoos.svg" alt="shampoos" class="help_item">
+                        <h4 class="help_name">Shampoos</h4>
+                    </div>
+                    <div class="help_list_card">
+                        <img src="/shelter/img/icons/icon-vitamins.svg" alt="vitamins" class="help_item">
+                        <h4 class="help_name">Vitamins</h4>
+                    </div>
+                    <div class="help_list_card">
+                        <img src="/shelter/img/icons/icon-medicines.svg" alt="medicines" class="help_item">
+                        <h4 class="help_name">Medicines</h4>
+                    </div>
+                    <div class="help_list_card">
+                        <img src="/shelter/img/icons/icon-collars-leashes.svg" alt="collars-leashes" class="help_item">
+                        <h4 class="help_name">Collars / leashes</h4>
+                    </div>
+                    <div class="help_list_card">
+                        <img src="/shelter/img/icons/icon-sleeping-area.svg" alt="sleeping-area" class="help_item">
+                        <h4 class="help_name">Sleeping area</h4>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="in-addition" id="in-addition">
+            <div class="in_addition_container wrapper">
+                <img src="/shelter/img/donation-dog.png" alt="donation-dog" class="in_addition_dog">
+                <div class="in_addition_content">
+                    <h3 class="in_addition_heading">You can also <br />
+                        make a donation</h3>
+                    <span class="in_addition_subheading">Name of the bank / Type of bank account</span>
+                    <div class="in_addition_credit_card">
+                        <img src="/shelter/img/credit-card.svg" alt="credit-card" class="in_addition_credit_card_icon">
+                        <div class="in_addition_credit_card_number">8380 2880 8028 8791 7435</div>
+                    </div>
+                    <p class="in_addition_legal_info">Legal information and lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a ipsum at libero sagittis dignissim sed ac diam. Praesent ultrices maximus tortor et vulputate. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+                </div>
+            </div>
+        </section>
     </main>
+    <footer class="footer">
+        <div class="footer_container wrapper">
+            <div class="footer_contacts">
+                <h3 class="footer_title">For questions<br />
+                and suggestions</h3>
+                <div class="footer_contacts_email footer_element">
+                    <img src="/shelter/img/icons/icon-email.svg" alt="icon-email" class="footer_icon">
+                    <h4 class="email footer_text">email@shelter.com</h4>
+                </div>
+                <div class="footer_contact_phone footer_element">
+                    <img src="/shelter/img/icons/icon-phone.svg" alt="icon-phone" class="footer_icon">
+                    <h4 class="phone footer_text">&#43;13 674 567 75 54</h4>
+                </div>
+            </div>
+            <div class="footer_locations">
+                <h3 class="footer_title">We are waiting<br />
+                for your visit</h3>
+                <div class="footer_locations_boston footer_element">
+                    <img src="/shelter/img/icons/icon-marker.svg" alt="icon-marker" class="footer_icon">
+                    <h4 class="location_1 footer_text">1 Central Street, Boston (entrance from the store)</h4>
+                </div>
+                <div class="footer_locations_london footer_element">
+                    <img src="/shelter/img/icons/icon-marker.svg" alt="icon-marker" class="footer_icon">
+                    <h4 class="location_2 footer_text">18 South Park, London </h4>
+                </div>
+            </div>
+            <img src="/shelter/img/footer-puppy.png" alt="footer-puppy" class="footer_puppy">
+        </div>
+    </footer>
 </body>
 </html>
