--- a/shelter/shelter.html
+++ b/shelter/shelter.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shelter</title>
+    <link rel="icon" type="image/x-icon" href="img/icons/icons8-dog-heart-64.png">
     <link rel="stylesheet" href="/shelter/css/shelter.css" />
 </head>
 <body>
@@ -23,13 +24,13 @@
                             <a class="nav-link first_link" href="#">About the shelter</a>
                         </li>
                         <li class="navbar-list-item">
-                            <a class="nav-link" href="#pets">Our pets</a>
+                            <a class="nav-link" href="#">Our pets</a>
                         </li>
                         <li class="navbar-list-item">
                             <a class="nav-link" href="#help">Help the shelter</a>
                         </li>
                         <li class="navbar-list-item">
-                            <a class="nav-link" href="#donation">Contacts</a>
+                            <a class="nav-link" href="#footer">Contacts</a>
                         </li>
                     </ul>
                 </div>
@@ -42,7 +43,7 @@
                 <div class="not_only_content">
                     <h2 class="content_heading">Not only people <br /> need a house</h2>
                     <p class="content_subheading">We offer to give a chance to a little and nice puppy with an extremely wide and open heart. He or she will love you more than anybody else in the world, you will see!</p>
-                    <a href="#pets"><button class="make_a_friend">Make a friend</button></a>
+                    <a href="#our-friends"><button class="make_a_friend">Make a friend</button></a>
                 </div>
                 <img src="/shelter/img/start-screen-puppy.svg" alt="start_puppy" class="start_puppy">
             </div>
@@ -60,9 +61,9 @@
                 </div>
             </div>
         </section>
-        <section class="pets" id="pets">
-            <div class="pets_content wrapper">
-                <h3 class="pets_heading">Our friends who <br />
+        <section class="our-friends" id="our-friends">
+            <div class="our_friends_content wrapper">
+                <h3 class="our_friends_heading">Our friends who <br />
                 are looking for a house</h3>
                 <div class="carousel">
                     <button class="arrow_back">
@@ -149,18 +150,18 @@
             </div>
         </section>
     </main>
-    <footer class="footer">
+    <footer class="footer" id="footer">
         <div class="footer_container wrapper">
             <div class="footer_contacts">
                 <h3 class="footer_title">For questions<br />
                 and suggestions</h3>
                 <div class="footer_contacts_email footer_element">
                     <img src="/shelter/img/icons/icon-email.svg" alt="icon-email" class="footer_icon">
-                    <h4 class="email footer_text">email@shelter.com</h4>
+                    <h4><a href="mailto:email@shelter.com" class="email footer_text">email@shelter.com</a></h4>
                 </div>
                 <div class="footer_contact_phone footer_element">
                     <img src="/shelter/img/icons/icon-phone.svg" alt="icon-phone" class="footer_icon">
-                    <h4 class="phone footer_text">&#43;13 674 567 75 54</h4>
+                    <h4><a href="tel:+136745677554" class="phone footer_text">&#43;13 674 567 75 54</a></h4>
                 </div>
             </div>
             <div class="footer_locations">
@@ -168,11 +169,11 @@
                 for your visit</h3>
                 <div class="footer_locations_boston footer_element">
                     <img src="/shelter/img/icons/icon-marker.svg" alt="icon-marker" class="footer_icon">
-                    <h4 class="location_1 footer_text">1 Central Street, Boston (entrance from the store)</h4>
+                    <h4><a class="location_1 footer_text" href="https://goo.gl/maps/kCxT78tQwB6f524r6">1 Central Street, Boston (entrance from the store)</a></h4>
                 </div>
                 <div class="footer_locations_london footer_element">
                     <img src="/shelter/img/icons/icon-marker.svg" alt="icon-marker" class="footer_icon">
-                    <h4 class="location_2 footer_text">18 South Park, London </h4>
+                    <h4><a class="location_2 footer_text" href="https://goo.gl/maps/LMf9Byv6YEkksZ9t7">18 South Park, London</a></h4>
                 </div>
             </div>
             <img src="/shelter/img/footer-puppy.png" alt="footer-puppy" class="footer_puppy">
