refactor: change structure of the project

--- a/shelter/shelter.html
+++ b/shelter/shelter.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shelter</title>
     <link rel="icon" type="image/x-icon" href="img/icons/icons8-dog-heart-64.png">
-    <link rel="stylesheet" href="/shelter/css/shelter.css" />
+    <link rel="stylesheet" href="/shelter/css/shelter.css">
 </head>
 <body>
     <div class="header">
         <div class="wrapper">
              <nav class="nav-menu">
                 <div class="logo">
-                    <a href="#not_only" class="logo_link">
+                    <a href="#" class="logo_link">
                         <div class="title">Cozy House</div>
                     </a>
                     <h1 class="subtitle">Shelter for pets in Boston</h1>
@@ -24,7 +24,7 @@
                             <a class="nav-link first_link" href="#">About the shelter</a>
                         </li>
                         <li class="navbar-list-item">
-                            <a class="nav-link" href="#">Our pets</a>
+                            <a class="nav-link" href="/shelter/pets.html">Our pets</a>
                         </li>
                         <li class="navbar-list-item">
                             <a class="nav-link" href="#help">Help the shelter</a>
@@ -41,9 +41,9 @@
         <section class="not_only" id="not_only">
             <div class="not_only_container wrapper">
                 <div class="not_only_content">
-                    <h2 class="content_heading">Not only people <br /> need a house</h2>
+                    <h2 class="content_heading">Not only people <br> need a house</h2>
                     <p class="content_subheading">We offer to give a chance to a little and nice puppy with an extremely wide and open heart. He or she will love you more than anybody else in the world, you will see!</p>
-                    <a href="#our-friends"><button class="make_a_friend">Make a friend</button></a>
+                    <a href="#our-friends" class="make_a_friend">Make a friend</a>
                 </div>
                 <img src="/shelter/img/start-screen-puppy.svg" alt="start_puppy" class="start_puppy">
             </div>
@@ -54,7 +54,7 @@
                     <img src="/shelter/img/about-pets.svg" alt="pets" class="about_pets_img">
                 </div>
                 <div class="about_content">
-                    <h3 class="about_heading">About the shelter<br />
+                    <h3 class="about_heading">About the shelter<br>
                         “Cozy House”</h3>
                     <p class="about_subheading">Currently we have 121 dogs and 342 cats on our hands and statistics show that only 20% of them will find a family. The others will continue to live with us and will be waiting for a lucky chance to become dearly loved.</p>
                     <p class="about_subheading">We feed our wards with the best food and make sure that they do not get sick, feel comfortable (including psychologically) and well. We are supported by 87 volunteers and 28 employees of various skill levels. About 12% of the animals are taken by the shelter staff. Taking care of the animals, they become attached to the pets and would hardly ever leave them alone.</p>
@@ -63,7 +63,7 @@
         </section>
         <section class="our-friends" id="our-friends">
             <div class="our_friends_content wrapper">
-                <h3 class="our_friends_heading">Our friends who <br />
+                <h3 class="our_friends_heading">Our friends who <br>
                 are looking for a house</h3>
                 <div class="carousel">
                     <button class="arrow_back">
@@ -88,12 +88,12 @@
                         <img src="/shelter/img/arrow_forward.svg" alt="button_arrow_forward" class="arrow button_arrow_forward">
                     </button>
                 </div>
-                <button class="rest_pets">Get to know the rest</button>
+                <a href="/shelter/pets.html" class="rest_pets">Get to know the rest</a>
             </div>
         </section>
         <section class="help" id="help">
             <div class="help-content wrapper">
-                <h3 class="help_heading">How you can help <br /> our shelter</h3>
+                <h3 class="help_heading">How you can help <br> our shelter</h3>
                 <div class="help_list">
                     <div class="help_list_card">
                         <img src="/shelter/img/icons/icon-pet-food.svg" alt="pet-food" class="help_item">
@@ -125,7 +125,7 @@
                     </div>
                     <div class="help_list_card">
                         <img src="/shelter/img/icons/icon-collars-leashes.svg" alt="collars-leashes" class="help_item">
-                        <h4 class="help_name">Collars / leashes</h4>
+                        <h4 class="help_name">Collars &#47; leashes</h4>
                     </div>
                     <div class="help_list_card">
                         <img src="/shelter/img/icons/icon-sleeping-area.svg" alt="sleeping-area" class="help_item">
@@ -138,13 +138,13 @@
             <div class="in_addition_container wrapper">
                 <img src="/shelter/img/donation-dog.png" alt="donation-dog" class="in_addition_dog">
                 <div class="in_addition_content">
-                    <h3 class="in_addition_heading">You can also <br />
+                    <h3 class="in_addition_heading">You can also <br>
                         make a donation</h3>
-                    <span class="in_addition_subheading">Name of the bank / Type of bank account</span>
-                    <div class="in_addition_credit_card">
+                    <span class="in_addition_subheading">Name of the bank &#47; Type of bank account</span>
+                    <a class="in_addition_credit_card" href="#">
                         <img src="/shelter/img/credit-card.svg" alt="credit-card" class="in_addition_credit_card_icon">
                         <div class="in_addition_credit_card_number">8380 2880 8028 8791 7435</div>
-                    </div>
+                    </a>
                     <p class="in_addition_legal_info">Legal information and lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a ipsum at libero sagittis dignissim sed ac diam. Praesent ultrices maximus tortor et vulputate. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
                 </div>
             </div>
@@ -153,7 +153,7 @@
     <footer class="footer" id="footer">
         <div class="footer_container wrapper">
             <div class="footer_contacts">
-                <h3 class="footer_title">For questions<br />
+                <h3 class="footer_title">For questions<br>
                 and suggestions</h3>
                 <div class="footer_contacts_email footer_element">
                     <img src="/shelter/img/icons/icon-email.svg" alt="icon-email" class="footer_icon">
@@ -165,15 +165,15 @@
                 </div>
             </div>
             <div class="footer_locations">
-                <h3 class="footer_title">We are waiting<br />
+                <h3 class="footer_title">We are waiting<br>
                 for your visit</h3>
                 <div class="footer_locations_boston footer_element">
                     <img src="/shelter/img/icons/icon-marker.svg" alt="icon-marker" class="footer_icon">
-                    <h4><a class="location_1 footer_text" href="https://goo.gl/maps/kCxT78tQwB6f524r6">1 Central Street, Boston (entrance from the store)</a></h4>
+                    <h4><a class="location_1 footer_text" href="https://goo.gl/maps/kCxT78tQwB6f524r6" target="_blank">1 Central Street, Boston (entrance from the store)</a></h4>
                 </div>
                 <div class="footer_locations_london footer_element">
                     <img src="/shelter/img/icons/icon-marker.svg" alt="icon-marker" class="footer_icon">
-                    <h4><a class="location_2 footer_text" href="https://goo.gl/maps/LMf9Byv6YEkksZ9t7">18 South Park, London</a></h4>
+                    <h4><a class="location_2 footer_text" href="https://goo.gl/maps/LMf9Byv6YEkksZ9t7" target="_blank">18 South Park, London</a></h4>
                 </div>
             </div>
             <img src="/shelter/img/footer-puppy.png" alt="footer-puppy" class="footer_puppy">
