--- a/shelter/pets.html
+++ b/shelter/pets.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pets</title>
     <link rel="icon" type="image/x-icon" href="img/icons/icons8-dog-heart-64.png">
-    <link rel="stylesheet" href="/shelter/css/pets.css" />
+    <link rel="stylesheet" href="/shelter/css/pets.css">
 </head>
 <body>
     <header class="header2">
@@ -14,7 +14,7 @@
             <div class="wrapper">
                  <nav class="nav-menu">
                     <div class="logo">
-                        <a href="#not_only" class="logo_link">
+                        <a href="/shelter/shelter.html" class="logo_link">
                             <div class="title">Cozy House</div>
                         </a>
                         <p class="subtitle">Shelter for pets in Boston</p>
@@ -22,13 +22,13 @@
                     <div class="navbar">
                         <ul class="navbar-list">
                             <li class="navbar-list-item">
-                                <a class="nav-link" href="#">About the shelter</a>
+                                <a class="nav-link" href="/shelter/shelter.html">About the shelter</a>
                             </li>
                             <li class="navbar-list-item second_link">
                                 <a class="nav-link" href="#">Our pets</a>
                             </li>
                             <li class="navbar-list-item">
-                                <a class="nav-link" href="#help">Help the shelter</a>
+                                <a class="nav-link" href="/shelter/shelter.html#help">Help the shelter</a>
                             </li>
                             <li class="navbar-list-item">
                                 <a class="nav-link" href="#footer">Contacts</a>
@@ -42,7 +42,7 @@
     <main>
         <section class="pets" id="pets">
             <div class="pets_content wrapper">
-                <h3 class="pets_heading">Our friends who <br />
+                <h3 class="pets_heading">Our friends who <br>
                 are looking for a house</h3>
                 <div class="carousel">
                     <div class="slider_item">
@@ -107,7 +107,7 @@
     <footer class="footer" id="footer">
         <div class="footer_container wrapper">
             <div class="footer_contacts">
-                <h3 class="footer_title">For questions<br />
+                <h3 class="footer_title">For questions<br>
                 and suggestions</h3>
                 <div class="footer_contacts_email footer_element">
                     <img src="/shelter/img/icons/icon-email.svg" alt="icon-email" class="footer_icon">
@@ -119,15 +119,15 @@
                 </div>
             </div>
             <div class="footer_locations">
-                <h3 class="footer_title">We are waiting<br />
+                <h3 class="footer_title">We are waiting<br>
                 for your visit</h3>
                 <div class="footer_locations_boston footer_element">
                     <img src="/shelter/img/icons/icon-marker.svg" alt="icon-marker" class="footer_icon">
-                    <h4><a class="location_1 footer_text" href="https://goo.gl/maps/kCxT78tQwB6f524r6">1 Central Street, Boston (entrance from the store)</a></h4>
+                    <h4><a class="location_1 footer_text" href="https://goo.gl/maps/kCxT78tQwB6f524r6" target="_blank">1 Central Street, Boston (entrance from the store)</a></h4>
                 </div>
                 <div class="footer_locations_london footer_element">
                     <img src="/shelter/img/icons/icon-marker.svg" alt="icon-marker" class="footer_icon">
-                    <h4><a class="location_2 footer_text" href="https://goo.gl/maps/LMf9Byv6YEkksZ9t7">18 South Park, London</a></h4>
+                    <h4><a class="location_2 footer_text" href="https://goo.gl/maps/LMf9Byv6YEkksZ9t7" target="_blank">18 South Park, London</a></h4>
                 </div>
             </div>
             <img src="/shelter/img/footer-puppy.png" alt="footer-puppy" class="footer_puppy">
