add: add js file

--- a/shelter/shelter.html
+++ b/shelter/shelter.html
@@ -179,5 +179,6 @@
             <img src="/shelter/img/footer-puppy.png" alt="footer-puppy" class="footer_puppy">
         </div>
     </footer>
+    <script type="module" src="/shelter/shelter.js"></script>
 </body>
 </html>
