--- a/shelter/pets.html
+++ b/shelter/pets.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pets</title>
     <link rel="icon" type="image/x-icon" href="img/icons/icons8-dog-heart-64.png">
-    <link rel="stylesheet" href="/shelter/css/pets.css">
+    <link rel="stylesheet" href="css/pets.css">
 </head>
 <body>
     <header class="header2">
@@ -14,7 +14,7 @@
             <div class="wrapper">
                  <nav class="nav-menu">
                     <div class="logo">
-                        <a href="/shelter/shelter.html" class="logo_link">
+                        <a href="shelter.html" class="logo_link">
                             <div class="title">Cozy House</div>
                         </a>
                         <p class="subtitle">Shelter for pets in Boston</p>
@@ -22,13 +22,13 @@
                     <div class="navbar">
                         <ul class="navbar-list">
                             <li class="navbar-list-item">
-                                <a class="nav-link" href="/shelter/shelter.html">About the shelter</a>
+                                <a class="nav-link" href="shelter.html">About the shelter</a>
                             </li>
                             <li class="navbar-list-item second_link">
                                 <a class="nav-link" href="#">Our pets</a>
                             </li>
                             <li class="navbar-list-item">
-                                <a class="nav-link" href="/shelter/shelter.html#help">Help the shelter</a>
+                                <a class="nav-link" href="shelter.html#help">Help the shelter</a>
                             </li>
                             <li class="navbar-list-item">
                                 <a class="nav-link" href="#footer">Contacts</a>
@@ -46,59 +46,59 @@
                 are looking for a house</h3>
                 <div class="carousel">
                     <div class="slider_item">
-                        <img src="/shelter/img/pets-katrine.png" alt="pet_katrine" class="card">
+                        <img src="img/pets-katrine.png" alt="pet_katrine" class="card">
                         <span class="name">Katrine</span>
                         <button class="learn_more">Learn more</button>
                     </div>
                     <div class="slider_item">
-                        <img src="/shelter/img/pets-jennifer.png" alt="pet_jennifer" class="card">
+                        <img src="img/pets-jennifer.png" alt="pet_jennifer" class="card">
                         <span class="name">Jennifer</span>
                         <button class="learn_more">Learn more</button>
                     </div>
                     <div class="slider_item">
-                        <img src="/shelter/img/pets-woody.png" alt="woody" class="card">
+                        <img src="img/pets-woody.png" alt="woody" class="card">
                         <span class="name">Woody</span>
                         <button class="learn_more">Learn more</button>
                     </div>
                     <div class="slider_item">
-                        <img src="/shelter/img/pets-sophia.png" alt="pet_sophia" class="card">
+                        <img src="img/pets-sophia.png" alt="pet_sophia" class="card">
                         <span class="name">Sophia</span>
                         <button class="learn_more">Learn more</button>
                     </div>
                     <div class="slider_item">
-                        <img src="/shelter/img/pets-timmy.png" alt="pet_timmy" class="card">
+                        <img src="img/pets-timmy.png" alt="pet_timmy" class="card">
                         <span class="name">Timmy</span>
                         <button class="learn_more">Learn more</button>
                     </div>
                     <div class="slider_item">
-                        <img src="/shelter/img/pets-charly.png" alt="pet_charly" class="card">
+                        <img src="img/pets-charly.png" alt="pet_charly" class="card">
                         <span class="name">Charly</span>
                         <button class="learn_more">Learn more</button>
                     </div>
                     <div class="slider_item">
-                        <img src="/shelter/img/pets-scarlet.png" alt="pet_scarlet" class="card">
+                        <img src="img/pets-scarlet.png" alt="pet_scarlet" class="card">
                         <span class="name">Scarlett</span>
                         <button class="learn_more">Learn more</button>
                     </div>
                     <div class="slider_item">
-                        <img src="/shelter/img/pets-freddie.png" alt="pet_freddie" class="card">
+                        <img src="img/pets-freddie.png" alt="pet_freddie" class="card">
                         <span class="name">Freddie</span>
                         <button class="learn_more">Learn more</button>
                     </div>
                 </div>
                 <div class="pets_carousel_navigation">
                     <button type="button" class="navigation_button">
-                        <img src="/shelter/img/icons/2arrs_back.svg" alt="double_arrow_back" class="nav_button_element">
+                        <img src="img/icons/2arrs_back.svg" alt="double_arrow_back" class="nav_button_element">
                     </button>
                     <button type="button" class="navigation_button">
-                        <img src="/shelter/img/icons/arr_back.svg" alt="arrow_back" class="nav_button_element">
+                        <img src="img/icons/arr_back.svg" alt="arrow_back" class="nav_button_element">
                     </button>
                     <button type="button" class="navigation_button page_number">1</button>
                     <button type="button" class="navigation_button">
-                        <img src="/shelter/img/icons/arr_forw.svg" alt="arrow_forw" class="nav_button_element">
+                        <img src="img/icons/arr_forw.svg" alt="arrow_forw" class="nav_button_element">
                     </button>
                     <button type="button" class="navigation_button">
-                        <img src="/shelter/img/icons/2arrs_forw.svg" alt="double_arrow_forw" class="nav_button_element">
+                        <img src="img/icons/2arrs_forw.svg" alt="double_arrow_forw" class="nav_button_element">
                     </button>
                 </div>
             </div>
@@ -110,11 +110,11 @@
                 <h3 class="footer_title">For questions<br>
                 and suggestions</h3>
                 <div class="footer_contacts_email footer_element">
-                    <img src="/shelter/img/icons/icon-email.svg" alt="icon-email" class="footer_icon">
+                    <img src="img/icons/icon-email.svg" alt="icon-email" class="footer_icon">
                     <h4><a href="mailto:email@shelter.com" class="email footer_text">email@shelter.com</a></h4>
                 </div>
                 <div class="footer_contact_phone footer_element">
-                    <img src="/shelter/img/icons/icon-phone.svg" alt="icon-phone" class="footer_icon">
+                    <img src="img/icons/icon-phone.svg" alt="icon-phone" class="footer_icon">
                     <h4><a href="tel:+136745677554" class="phone footer_text">&#43;13 674 567 75 54</a></h4>
                 </div>
             </div>
@@ -122,15 +122,15 @@
                 <h3 class="footer_title">We are waiting<br>
                 for your visit</h3>
                 <div class="footer_locations_boston footer_element">
-                    <img src="/shelter/img/icons/icon-marker.svg" alt="icon-marker" class="footer_icon">
+                    <img src="img/icons/icon-marker.svg" alt="icon-marker" class="footer_icon">
                     <h4><a class="location_1 footer_text" href="https://goo.gl/maps/kCxT78tQwB6f524r6" target="_blank">1 Central Street, Boston (entrance from the store)</a></h4>
                 </div>
                 <div class="footer_locations_london footer_element">
-                    <img src="/shelter/img/icons/icon-marker.svg" alt="icon-marker" class="footer_icon">
+                    <img src="img/icons/icon-marker.svg" alt="icon-marker" class="footer_icon">
                     <h4><a class="location_2 footer_text" href="https://goo.gl/maps/LMf9Byv6YEkksZ9t7" target="_blank">18 South Park, London</a></h4>
                 </div>
             </div>
-            <img src="/shelter/img/footer-puppy.png" alt="footer-puppy" class="footer_puppy">
+            <img src="img/footer-puppy.png" alt="footer-puppy" class="footer_puppy">
         </div>
     </footer>
 </body>
