--- a/shelter/shelter.html
+++ b/shelter/shelter.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shelter</title>
     <link rel="icon" type="image/x-icon" href="img/icons/icons8-dog-heart-64.png">
-    <link rel="stylesheet" href="/shelter/css/shelter.css">
+    <link rel="stylesheet" href="css/shelter.css">
 </head>
 <body>
     <div class="header">
@@ -24,7 +24,7 @@
                             <a class="nav-link first_link" href="#">About the shelter</a>
                         </li>
                         <li class="navbar-list-item">
-                            <a class="nav-link" href="/shelter/pets.html">Our pets</a>
+                            <a class="nav-link" href="pets.html">Our pets</a>
                         </li>
                         <li class="navbar-list-item">
                             <a class="nav-link" href="#help">Help the shelter</a>
@@ -45,13 +45,13 @@
                     <p class="content_subheading">We offer to give a chance to a little and nice puppy with an extremely wide and open heart. He or she will love you more than anybody else in the world, you will see!</p>
                     <a href="#our-friends" class="make_a_friend">Make a friend</a>
                 </div>
-                <img src="/shelter/img/start-screen-puppy.svg" alt="start_puppy" class="start_puppy">
+                <img src="img/start-screen-puppy.svg" alt="start_puppy" class="start_puppy">
             </div>
         </section>
         <section class="about" id="about">
             <div class="about_container wrapper">
                 <div class="about_pets">
-                    <img src="/shelter/img/about-pets.svg" alt="pets" class="about_pets_img">
+                    <img src="img/about-pets.svg" alt="pets" class="about_pets_img">
                 </div>
                 <div class="about_content">
                     <h3 class="about_heading">About the shelter<br>
@@ -67,28 +67,28 @@
                 are looking for a house</h3>
                 <div class="carousel">
                     <button class="arrow_back">
-                        <img src="/shelter/img/arrow_back.svg" alt="button_arrow_back" class="arrow button_arrow_back">
+                        <img src="img/arrow_back.svg" alt="button_arrow_back" class="arrow button_arrow_back">
                     </button>
                     <div class="slider_item">
-                        <img src="/shelter/img/pets-katrine.png" alt="pet_katrine" class="card">
+                        <img src="img/pets-katrine.png" alt="pet_katrine" class="card">
                         <span class="name">Katrine</span>
                         <button class="learn_more">Learn more</button>
                     </div>
                     <div class="slider_item">
-                        <img src="/shelter/img/pets-jennifer.png" alt="pet_jennifer" class="card">
+                        <img src="img/pets-jennifer.png" alt="pet_jennifer" class="card">
                         <span class="name">Jennifer</span>
                         <button class="learn_more">Learn more</button>
                     </div>
                     <div class="slider_item last_item">
-                        <img src="/shelter/img/pets-woody.png" alt="woody" class="card">
+                        <img src="img/pets-woody.png" alt="woody" class="card">
                         <span class="name">Woody</span>
                         <button class="learn_more">Learn more</button>
                     </div>
                     <button class="arrow_forward">
-                        <img src="/shelter/img/arrow_forward.svg" alt="button_arrow_forward" class="arrow button_arrow_forward">
+                        <img src="img/arrow_forward.svg" alt="button_arrow_forward" class="arrow button_arrow_forward">
                     </button>
                 </div>
-                <a href="/shelter/pets.html" class="rest_pets">Get to know the rest</a>
+                <a href="pets.html" class="rest_pets">Get to know the rest</a>
             </div>
         </section>
         <section class="help" id="help">
@@ -96,39 +96,39 @@
                 <h3 class="help_heading">How you can help <br> our shelter</h3>
                 <div class="help_list">
                     <div class="help_list_card">
-                        <img src="/shelter/img/icons/icon-pet-food.svg" alt="pet-food" class="help_item">
+                        <img src="img/icons/icon-pet-food.svg" alt="pet-food" class="help_item">
                         <h4 class="help_name">Pet food</h4>
                     </div>
                     <div class="help_list_card">
-                        <img src="/shelter/img/icons/icon-transportation.svg" alt="transportation" class="help_item">
+                        <img src="img/icons/icon-transportation.svg" alt="transportation" class="help_item">
                         <h4 class="help_name">Transportation</h4>
                     </div>
                     <div class="help_list_card">
-                        <img src="/shelter/img/icons/icon-toys.svg" alt="toys" class="help_item">
+                        <img src="img/icons/icon-toys.svg" alt="toys" class="help_item">
                         <h4 class="help_name">Toys</h4>
                     </div>
                     <div class="help_list_card">
-                        <img src="/shelter/img/icons/icon-bowls-and-cups.svg" alt="bowls-and-cups" class="help_item">
+                        <img src="img/icons/icon-bowls-and-cups.svg" alt="bowls-and-cups" class="help_item">
                         <h4 class="help_name">Bowls and cups</h4>
                     </div>
                     <div class="help_list_card">
-                        <img src="/shelter/img/icons/icon-shampoos.svg" alt="shampoos" class="help_item">
+                        <img src="img/icons/icon-shampoos.svg" alt="shampoos" class="help_item">
                         <h4 class="help_name">Shampoos</h4>
                     </div>
                     <div class="help_list_card">
-                        <img src="/shelter/img/icons/icon-vitamins.svg" alt="vitamins" class="help_item">
+                        <img src="img/icons/icon-vitamins.svg" alt="vitamins" class="help_item">
                         <h4 class="help_name">Vitamins</h4>
                     </div>
                     <div class="help_list_card">
-                        <img src="/shelter/img/icons/icon-medicines.svg" alt="medicines" class="help_item">
+                        <img src="img/icons/icon-medicines.svg" alt="medicines" class="help_item">
                         <h4 class="help_name">Medicines</h4>
                     </div>
                     <div class="help_list_card">
-                        <img src="/shelter/img/icons/icon-collars-leashes.svg" alt="collars-leashes" class="help_item">
+                        <img src="img/icons/icon-collars-leashes.svg" alt="collars-leashes" class="help_item">
                         <h4 class="help_name">Collars &#47; leashes</h4>
                     </div>
                     <div class="help_list_card">
-                        <img src="/shelter/img/icons/icon-sleeping-area.svg" alt="sleeping-area" class="help_item">
+                        <img src="img/icons/icon-sleeping-area.svg" alt="sleeping-area" class="help_item">
                         <h4 class="help_name">Sleeping area</h4>
                     </div>
                 </div>
@@ -136,13 +136,13 @@
         </section>
         <section class="in-addition" id="in-addition">
             <div class="in_addition_container wrapper">
-                <img src="/shelter/img/donation-dog.png" alt="donation-dog" class="in_addition_dog">
+                <img src="img/donation-dog.png" alt="donation-dog" class="in_addition_dog">
                 <div class="in_addition_content">
                     <h3 class="in_addition_heading">You can also <br>
                         make a donation</h3>
                     <span class="in_addition_subheading">Name of the bank &#47; Type of bank account</span>
                     <a class="in_addition_credit_card" href="#">
-                        <img src="/shelter/img/credit-card.svg" alt="credit-card" class="in_addition_credit_card_icon">
+                        <img src="img/credit-card.svg" alt="credit-card" class="in_addition_credit_card_icon">
                         <div class="in_addition_credit_card_number">8380 2880 8028 8791 7435</div>
                     </a>
                     <p class="in_addition_legal_info">Legal information and lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a ipsum at libero sagittis dignissim sed ac diam. Praesent ultrices maximus tortor et vulputate. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
@@ -156,11 +156,11 @@
                 <h3 class="footer_title">For questions<br>
                 and suggestions</h3>
                 <div class="footer_contacts_email footer_element">
-                    <img src="/shelter/img/icons/icon-email.svg" alt="icon-email" class="footer_icon">
+                    <img src="img/icons/icon-email.svg" alt="icon-email" class="footer_icon">
                     <h4><a href="mailto:email@shelter.com" class="email footer_text">email@shelter.com</a></h4>
                 </div>
                 <div class="footer_contact_phone footer_element">
-                    <img src="/shelter/img/icons/icon-phone.svg" alt="icon-phone" class="footer_icon">
+                    <img src="img/icons/icon-phone.svg" alt="icon-phone" class="footer_icon">
                     <h4><a href="tel:+136745677554" class="phone footer_text">&#43;13 674 567 75 54</a></h4>
                 </div>
             </div>
@@ -168,17 +168,17 @@
                 <h3 class="footer_title">We are waiting<br>
                 for your visit</h3>
                 <div class="footer_locations_boston footer_element">
-                    <img src="/shelter/img/icons/icon-marker.svg" alt="icon-marker" class="footer_icon">
+                    <img src="img/icons/icon-marker.svg" alt="icon-marker" class="footer_icon">
                     <h4><a class="location_1 footer_text" href="https://goo.gl/maps/kCxT78tQwB6f524r6" target="_blank">1 Central Street, Boston (entrance from the store)</a></h4>
                 </div>
                 <div class="footer_locations_london footer_element">
-                    <img src="/shelter/img/icons/icon-marker.svg" alt="icon-marker" class="footer_icon">
+                    <img src="img/icons/icon-marker.svg" alt="icon-marker" class="footer_icon">
                     <h4><a class="location_2 footer_text" href="https://goo.gl/maps/LMf9Byv6YEkksZ9t7" target="_blank">18 South Park, London</a></h4>
                 </div>
             </div>
-            <img src="/shelter/img/footer-puppy.png" alt="footer-puppy" class="footer_puppy">
+            <img src="img/footer-puppy.png" alt="footer-puppy" class="footer_puppy">
         </div>
     </footer>
-    <script type="module" src="/shelter/shelter.js"></script>
+    <script type="module" src="shelter.js"></script>
 </body>
 </html>
