fix: img urls fix

--- a/shelter/pets.html
+++ b/shelter/pets.html
@@ -133,5 +133,6 @@
             <img src="img/footer-puppy.png" alt="footer-puppy" class="footer_puppy">
         </div>
     </footer>
+    <script type="module" src="shelter.js"></script>
 </body>
 </html>
