fix: add shadow-box; fix link

--- a/shelter/pets.html
+++ b/shelter/pets.html
@@ -25,7 +25,7 @@
                                 <a class="nav-link" href="shelter.html">About the shelter</a>
                             </li>
                             <li class="navbar-list-item second_link">
-                                <a class="nav-link" href="#">Our pets</a>
+                                <a class="second_link_2" href="#">Our pets</a>
                             </li>
                             <li class="navbar-list-item">
                                 <a class="nav-link" href="shelter.html#help">Help the shelter</a>
