--- a/shelter/pets.html
+++ b/shelter/pets.html
@@ -15,7 +15,7 @@
                  <nav class="nav-menu">
                     <div class="logo">
                         <a href="shelter.html" class="logo_link">
-                            <div class="title">Cozy House</div>
+                            <h1 class="title">Cozy House</h1>
                         </a>
                         <p class="subtitle">Shelter for pets in Boston</p>
                     </div>
