--- a/shelter/shelter.html
+++ b/shelter/shelter.html
@@ -14,9 +14,9 @@
              <nav class="nav-menu">
                 <div class="logo">
                     <a href="#" class="logo_link">
-                        <div class="title">Cozy House</div>
+                        <h1 class="title">Cozy House</h1>
                     </a>
-                    <h1 class="subtitle">Shelter for pets in Boston</h1>
+                    <div class="subtitle">Shelter for pets in Boston</div>
                 </div>
                 <div class="navbar">
                     <ul class="navbar-list">
@@ -50,9 +50,7 @@
         </section>
         <section class="about" id="about">
             <div class="about_container wrapper">
-                <div class="about_pets">
-                    <img src="img/about-pets.svg" alt="pets" class="about_pets_img">
-                </div>
+                <img src="img/about-pets.svg" alt="pets" class="about_pets">
                 <div class="about_content">
                     <h3 class="about_heading">About the shelter<br>
                         “Cozy House”</h3>
