--- a/shelter/pets.html
+++ b/shelter/pets.html
@@ -106,28 +106,30 @@
     </main>
     <footer class="footer" id="footer">
         <div class="footer_container wrapper">
-            <div class="footer_contacts">
-                <h3 class="footer_title">For questions<br>
-                and suggestions</h3>
-                <div class="footer_contacts_email footer_element">
-                    <img src="img/icons/icon-email.svg" alt="icon-email" class="footer_icon">
-                    <h4><a href="mailto:email@shelter.com" class="email footer_text">email@shelter.com</a></h4>
+            <div class="contacts_container">
+                <div class="footer_contacts">
+                    <h3 class="footer_title">For questions<br>
+                    and suggestions</h3>
+                    <div class="footer_contacts_email footer_element">
+                        <img src="img/icons/icon-email.svg" alt="icon-email" class="footer_icon">
+                        <h4><a href="mailto:email@shelter.com" class="email footer_text">email@shelter.com</a></h4>
+                    </div>
+                    <div class="footer_contact_phone footer_element">
+                        <img src="img/icons/icon-phone.svg" alt="icon-phone" class="footer_icon">
+                        <h4><a href="tel:+136745677554" class="phone footer_text">&#43;13 674 567 75 54</a></h4>
+                    </div>
                 </div>
-                <div class="footer_contact_phone footer_element">
-                    <img src="img/icons/icon-phone.svg" alt="icon-phone" class="footer_icon">
-                    <h4><a href="tel:+136745677554" class="phone footer_text">&#43;13 674 567 75 54</a></h4>
-                </div>
-            </div>
-            <div class="footer_locations">
-                <h3 class="footer_title">We are waiting<br>
-                for your visit</h3>
-                <div class="footer_locations_boston footer_element">
-                    <img src="img/icons/icon-marker.svg" alt="icon-marker" class="footer_icon">
-                    <h4><a class="location_1 footer_text" href="https://goo.gl/maps/kCxT78tQwB6f524r6" target="_blank">1 Central Street, Boston (entrance from the store)</a></h4>
-                </div>
-                <div class="footer_locations_london footer_element">
-                    <img src="img/icons/icon-marker.svg" alt="icon-marker" class="footer_icon">
-                    <h4><a class="location_2 footer_text" href="https://goo.gl/maps/LMf9Byv6YEkksZ9t7" target="_blank">18 South Park, London</a></h4>
+                <div class="footer_locations">
+                    <h3 class="footer_title">We are waiting<br>
+                    for your visit</h3>
+                    <div class="footer_locations_boston footer_element">
+                        <img src="img/icons/icon-marker.svg" alt="icon-marker" class="footer_icon">
+                        <h4><a class="location_1 footer_text" href="https://goo.gl/maps/kCxT78tQwB6f524r6" target="_blank">1 Central Street, Boston (entrance from the store)</a></h4>
+                    </div>
+                    <div class="footer_locations_london footer_element">
+                        <img src="img/icons/icon-marker.svg" alt="icon-marker" class="footer_icon">
+                        <h4><a class="location_2 footer_text" href="https://goo.gl/maps/LMf9Byv6YEkksZ9t7" target="_blank">18 South Park, London</a></h4>
+                    </div>
                 </div>
             </div>
             <img src="img/footer-puppy.png" alt="footer-puppy" class="footer_puppy">
