--- a/shelter/shelter.html
+++ b/shelter/shelter.html
@@ -43,7 +43,9 @@
                 <div class="not_only_content">
                     <h2 class="content_heading">Not only people <br> need a house</h2>
                     <p class="content_subheading">We offer to give a chance to a little and nice puppy with an extremely wide and open heart. He or she will love you more than anybody else in the world, you will see!</p>
-                    <a href="#our-friends" class="make_a_friend">Make a friend</a>
+                    <div class="not_only_button">
+                        <a href="#our-friends" class="make_a_friend">Make a friend</a>
+                    </div>
                 </div>
                 <img src="img/start-screen-puppy.svg" alt="start_puppy" class="start_puppy">
             </div>
@@ -67,7 +69,7 @@
                     <button class="arrow_back">
                         <img src="img/arrow_back.svg" alt="button_arrow_back" class="arrow button_arrow_back">
                     </button>
-                    <div class="slider_item">
+                    <div class="slider_item first_slider_item">
                         <img src="img/pets-katrine.png" alt="pet_katrine" class="card">
                         <span class="name">Katrine</span>
                         <button class="learn_more">Learn more</button>
@@ -150,28 +152,30 @@
     </main>
     <footer class="footer" id="footer">
         <div class="footer_container wrapper">
-            <div class="footer_contacts">
-                <h3 class="footer_title">For questions<br>
-                and suggestions</h3>
-                <div class="footer_contacts_email footer_element">
-                    <img src="img/icons/icon-email.svg" alt="icon-email" class="footer_icon">
-                    <h4><a href="mailto:email@shelter.com" class="email footer_text">email@shelter.com</a></h4>
+            <div class="contacts_container">
+                <div class="footer_contacts">
+                    <h3 class="footer_title">For questions<br>
+                    and suggestions</h3>
+                    <div class="footer_contacts_email footer_element">
+                        <img src="img/icons/icon-email.svg" alt="icon-email" class="footer_icon">
+                        <h4><a href="mailto:email@shelter.com" class="email footer_text">email@shelter.com</a></h4>
+                    </div>
+                    <div class="footer_contact_phone footer_element">
+                        <img src="img/icons/icon-phone.svg" alt="icon-phone" class="footer_icon">
+                        <h4><a href="tel:+136745677554" class="phone footer_text">&#43;13 674 567 75 54</a></h4>
+                    </div>
                 </div>
-                <div class="footer_contact_phone footer_element">
-                    <img src="img/icons/icon-phone.svg" alt="icon-phone" class="footer_icon">
-                    <h4><a href="tel:+136745677554" class="phone footer_text">&#43;13 674 567 75 54</a></h4>
-                </div>
-            </div>
-            <div class="footer_locations">
-                <h3 class="footer_title">We are waiting<br>
-                for your visit</h3>
-                <div class="footer_locations_boston footer_element">
-                    <img src="img/icons/icon-marker.svg" alt="icon-marker" class="footer_icon">
-                    <h4><a class="location_1 footer_text" href="https://goo.gl/maps/kCxT78tQwB6f524r6" target="_blank">1 Central Street, Boston (entrance from the store)</a></h4>
-                </div>
-                <div class="footer_locations_london footer_element">
-                    <img src="img/icons/icon-marker.svg" alt="icon-marker" class="footer_icon">
-                    <h4><a class="location_2 footer_text" href="https://goo.gl/maps/LMf9Byv6YEkksZ9t7" target="_blank">18 South Park, London</a></h4>
+                <div class="footer_locations">
+                    <h3 class="footer_title">We are waiting<br>
+                    for your visit</h3>
+                    <div class="footer_locations_boston footer_element">
+                        <img src="img/icons/icon-marker.svg" alt="icon-marker" class="footer_icon">
+                        <h4><a class="location_1 footer_text" href="https://goo.gl/maps/kCxT78tQwB6f524r6" target="_blank">1 Central Street, Boston (entrance from the store)</a></h4>
+                    </div>
+                    <div class="footer_locations_london footer_element">
+                        <img src="img/icons/icon-marker.svg" alt="icon-marker" class="footer_icon">
+                        <h4><a class="location_2 footer_text" href="https://goo.gl/maps/LMf9Byv6YEkksZ9t7" target="_blank">18 South Park, London</a></h4>
+                    </div>
                 </div>
             </div>
             <img src="img/footer-puppy.png" alt="footer-puppy" class="footer_puppy">
