feat: add adaptive 320px

--- a/shelter/pets.html
+++ b/shelter/pets.html
@@ -9,132 +9,139 @@
     <link rel="stylesheet" href="css/pets.css">
 </head>
 <body>
-    <header class="header2">
-        <div class="header">
-            <div class="wrapper">
-                 <nav class="nav-menu">
-                    <div class="logo">
-                        <a href="shelter.html" class="logo_link">
-                            <h1 class="title">Cozy House</h1>
-                        </a>
-                        <p class="subtitle">Shelter for pets in Boston</p>
-                    </div>
-                    <div class="navbar">
-                        <ul class="navbar-list">
-                            <li class="navbar-list-item">
-                                <a class="nav-link" href="shelter.html">About the shelter</a>
-                            </li>
-                            <li class="navbar-list-item second_link">
-                                <a class="second_link_2" href="#">Our pets</a>
-                            </li>
-                            <li class="navbar-list-item">
-                                <a class="nav-link" href="shelter.html#help">Help the shelter</a>
-                            </li>
-                            <li class="navbar-list-item">
-                                <a class="nav-link" href="#footer">Contacts</a>
-                            </li>
-                        </ul>
-                    </div>
-                </nav>
-            </div>
-        </div>
-    </header>
-    <main>
-        <section class="pets" id="pets">
-            <div class="pets_content wrapper">
-                <h3 class="pets_heading">Our friends who <br>
-                are looking for a house</h3>
-                <div class="carousel">
-                    <div class="slider_item">
-                        <img src="img/pets-katrine.png" alt="pet_katrine" class="card">
-                        <span class="name">Katrine</span>
-                        <button class="learn_more">Learn more</button>
-                    </div>
-                    <div class="slider_item">
-                        <img src="img/pets-jennifer.png" alt="pet_jennifer" class="card">
-                        <span class="name">Jennifer</span>
-                        <button class="learn_more">Learn more</button>
-                    </div>
-                    <div class="slider_item">
-                        <img src="img/pets-woody.png" alt="woody" class="card">
-                        <span class="name">Woody</span>
-                        <button class="learn_more">Learn more</button>
-                    </div>
-                    <div class="slider_item">
-                        <img src="img/pets-sophia.png" alt="pet_sophia" class="card">
-                        <span class="name">Sophia</span>
-                        <button class="learn_more">Learn more</button>
-                    </div>
-                    <div class="slider_item">
-                        <img src="img/pets-timmy.png" alt="pet_timmy" class="card">
-                        <span class="name">Timmy</span>
-                        <button class="learn_more">Learn more</button>
-                    </div>
-                    <div class="slider_item">
-                        <img src="img/pets-charly.png" alt="pet_charly" class="card">
-                        <span class="name">Charly</span>
-                        <button class="learn_more">Learn more</button>
-                    </div>
-                    <div class="slider_item">
-                        <img src="img/pets-scarlet.png" alt="pet_scarlet" class="card">
-                        <span class="name">Scarlett</span>
-                        <button class="learn_more">Learn more</button>
-                    </div>
-                    <div class="slider_item">
-                        <img src="img/pets-freddie.png" alt="pet_freddie" class="card">
-                        <span class="name">Freddie</span>
-                        <button class="learn_more">Learn more</button>
-                    </div>
-                </div>
-                <div class="pets_carousel_navigation">
-                    <button type="button" class="navigation_button">
-                        <img src="img/icons/2arrs_back.svg" alt="double_arrow_back" class="nav_button_element">
-                    </button>
-                    <button type="button" class="navigation_button">
-                        <img src="img/icons/arr_back.svg" alt="arrow_back" class="nav_button_element">
-                    </button>
-                    <button type="button" class="navigation_button page_number">1</button>
-                    <button type="button" class="navigation_button">
-                        <img src="img/icons/arr_forw.svg" alt="arrow_forw" class="nav_button_element">
-                    </button>
-                    <button type="button" class="navigation_button">
-                        <img src="img/icons/2arrs_forw.svg" alt="double_arrow_forw" class="nav_button_element">
-                    </button>
+    <div class="body-wrapper">
+        <header class="header2">
+            <div class="header">
+                <div class="wrapper">
+                     <nav class="nav-menu">
+                        <div class="logo">
+                            <a href="shelter.html" class="logo_link">
+                                <h1 class="title">Cozy House</h1>
+                            </a>
+                            <p class="subtitle">Shelter for pets in Boston</p>
+                        </div>
+                        <button class="header_burger-btn">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </button>
+                        <div class="navbar">
+                            <ul class="navbar-list">
+                                <li class="navbar-list-item">
+                                    <a class="nav-link" href="shelter.html">About the shelter</a>
+                                </li>
+                                <li class="navbar-list-item second_link">
+                                    <a class="second_link_2" href="#">Our pets</a>
+                                </li>
+                                <li class="navbar-list-item">
+                                    <a class="nav-link" href="shelter.html#help">Help the shelter</a>
+                                </li>
+                                <li class="navbar-list-item">
+                                    <a class="nav-link" href="#footer">Contacts</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </nav>
                 </div>
             </div>
-        </section>
-    </main>
-    <footer class="footer" id="footer">
-        <div class="footer_container wrapper">
-            <div class="contacts_container">
-                <div class="footer_contacts">
-                    <h3 class="footer_title">For questions<br>
-                    and suggestions</h3>
-                    <div class="footer_contacts_email footer_element">
-                        <img src="img/icons/icon-email.svg" alt="icon-email" class="footer_icon">
-                        <h4><a href="mailto:email@shelter.com" class="email footer_text">email@shelter.com</a></h4>
+        </header>
+        <main>
+            <section class="pets" id="pets">
+                <div class="pets_content wrapper">
+                    <h3 class="pets_heading">Our friends who <br>
+                    are looking for a house</h3>
+                    <div class="carousel">
+                        <div class="slider_item">
+                            <img src="img/pets-katrine.png" alt="pet_katrine" class="card">
+                            <span class="name">Katrine</span>
+                            <button class="learn_more">Learn more</button>
+                        </div>
+                        <div class="slider_item">
+                            <img src="img/pets-jennifer.png" alt="pet_jennifer" class="card">
+                            <span class="name">Jennifer</span>
+                            <button class="learn_more">Learn more</button>
+                        </div>
+                        <div class="slider_item">
+                            <img src="img/pets-woody.png" alt="woody" class="card">
+                            <span class="name">Woody</span>
+                            <button class="learn_more">Learn more</button>
+                        </div>
+                        <div class="slider_item">
+                            <img src="img/pets-sophia.png" alt="pet_sophia" class="card">
+                            <span class="name">Sophia</span>
+                            <button class="learn_more">Learn more</button>
+                        </div>
+                        <div class="slider_item">
+                            <img src="img/pets-timmy.png" alt="pet_timmy" class="card">
+                            <span class="name">Timmy</span>
+                            <button class="learn_more">Learn more</button>
+                        </div>
+                        <div class="slider_item">
+                            <img src="img/pets-charly.png" alt="pet_charly" class="card">
+                            <span class="name">Charly</span>
+                            <button class="learn_more">Learn more</button>
+                        </div>
+                        <div class="slider_item">
+                            <img src="img/pets-scarlet.png" alt="pet_scarlet" class="card">
+                            <span class="name">Scarlett</span>
+                            <button class="learn_more">Learn more</button>
+                        </div>
+                        <div class="slider_item">
+                            <img src="img/pets-freddie.png" alt="pet_freddie" class="card">
+                            <span class="name">Freddie</span>
+                            <button class="learn_more">Learn more</button>
+                        </div>
                     </div>
-                    <div class="footer_contact_phone footer_element">
-                        <img src="img/icons/icon-phone.svg" alt="icon-phone" class="footer_icon">
-                        <h4><a href="tel:+136745677554" class="phone footer_text">&#43;13 674 567 75 54</a></h4>
+                    <div class="pets_carousel_navigation">
+                        <button type="button" class="navigation_button">
+                            <img src="img/icons/2arrs_back.svg" alt="double_arrow_back" class="nav_button_element">
+                        </button>
+                        <button type="button" class="navigation_button">
+                            <img src="img/icons/arr_back.svg" alt="arrow_back" class="nav_button_element">
+                        </button>
+                        <button type="button" class="navigation_button page_number">1</button>
+                        <button type="button" class="navigation_button">
+                            <img src="img/icons/arr_forw.svg" alt="arrow_forw" class="nav_button_element">
+                        </button>
+                        <button type="button" class="navigation_button">
+                            <img src="img/icons/2arrs_forw.svg" alt="double_arrow_forw" class="nav_button_element">
+                        </button>
                     </div>
                 </div>
-                <div class="footer_locations">
-                    <h3 class="footer_title">We are waiting<br>
-                    for your visit</h3>
-                    <div class="footer_locations_boston footer_element">
-                        <img src="img/icons/icon-marker.svg" alt="icon-marker" class="footer_icon">
-                        <h4><a class="location_1 footer_text" href="https://goo.gl/maps/kCxT78tQwB6f524r6" target="_blank">1 Central Street, Boston (entrance from the store)</a></h4>
+            </section>
+        </main>
+        <footer class="footer" id="footer">
+            <div class="footer_container wrapper">
+                <div class="contacts_container">
+                    <div class="footer_contacts">
+                        <h3 class="footer_title">For questions<br>
+                        and suggestions</h3>
+                        <div class="footer_contacts_email footer_element">
+                            <img src="img/icons/icon-email.svg" alt="icon-email" class="footer_icon">
+                            <h4><a href="mailto:email@shelter.com" class="email footer_text">email@shelter.com</a></h4>
+                        </div>
+                        <div class="footer_contact_phone footer_element">
+                            <img src="img/icons/icon-phone.svg" alt="icon-phone" class="footer_icon">
+                            <h4><a href="tel:+136745677554" class="phone footer_text">&#43;13 674 567 75 54</a></h4>
+                        </div>
                     </div>
-                    <div class="footer_locations_london footer_element">
-                        <img src="img/icons/icon-marker.svg" alt="icon-marker" class="footer_icon">
-                        <h4><a class="location_2 footer_text" href="https://goo.gl/maps/LMf9Byv6YEkksZ9t7" target="_blank">18 South Park, London</a></h4>
+                    <div class="footer_locations">
+                        <h3 class="footer_title">We are waiting<br>
+                        for your visit</h3>
+                        <div class="footer_locations_boston footer_element">
+                            <img src="img/icons/icon-marker.svg" alt="icon-marker" class="footer_icon">
+                            <h4><a class="location_1 footer_text" href="https://goo.gl/maps/kCxT78tQwB6f524r6" target="_blank">1 Central Street, Boston (entrance from the store)</a></h4>
+                        </div>
+                        <div class="footer_locations_london footer_element">
+                            <img src="img/icons/icon-marker.svg" alt="icon-marker" class="footer_icon">
+                            <h4><a class="location_2 footer_text" href="https://goo.gl/maps/LMf9Byv6YEkksZ9t7" target="_blank">18 South Park, London</a></h4>
+                        </div>
                     </div>
                 </div>
+                <img src="img/footer-puppy.png" alt="footer-puppy" class="footer_puppy">
             </div>
-            <img src="img/footer-puppy.png" alt="footer-puppy" class="footer_puppy">
-        </div>
-    </footer>
-    <script type="module" src="shelter.js"></script>
+        </footer>
+        <script type="module" src="shelter.js"></script>
+    </div>
 </body>
 </html>
