feat: add burger-menu to pets and main pages

--- a/shelter/shelter.html
+++ b/shelter/shelter.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/shelter.css">
 </head>
 <body>
+    <div class="shadow"></div>
     <div class="body-wrapper">
         <div class="header">
             <div class="wrapper">
@@ -19,12 +20,12 @@
                         </a>
                         <div class="subtitle">Shelter for pets in Boston</div>
                     </div>
-                    <button class="header_burger-btn">
+                    <button class="header_burger-btn" id="burger">
                         <span></span>
                         <span></span>
                         <span></span>
                     </button>
-                    <div class="navbar">
+                    <div class="navbar" id="burger-menu">
                         <ul class="navbar-list">
                             <li class="navbar-list-item">
                                 <a class="nav-link first_link" href="#">About the shelter</a>
