--- a/shelter/pets.html
+++ b/shelter/pets.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/pets.css">
 </head>
 <body>
+    <div class="shadow"></div>
     <div class="body-wrapper">
         <header class="header2">
             <div class="header">
@@ -20,18 +21,18 @@
                             </a>
                             <p class="subtitle">Shelter for pets in Boston</p>
                         </div>
-                        <button class="header_burger-btn">
+                        <button class="header_burger-btn" id="burger">
                             <span></span>
                             <span></span>
                             <span></span>
                         </button>
-                        <div class="navbar">
+                        <div class="navbar" id="burger-menu">
                             <ul class="navbar-list">
                                 <li class="navbar-list-item">
                                     <a class="nav-link" href="shelter.html">About the shelter</a>
                                 </li>
                                 <li class="navbar-list-item second_link">
-                                    <a class="second_link_2" href="#">Our pets</a>
+                                    <a class="second_link_2 nav-link" href="#">Our pets</a>
                                 </li>
                                 <li class="navbar-list-item">
                                     <a class="nav-link" href="shelter.html#help">Help the shelter</a>
