feat: add slider

--- a/shelter/shelter.html
+++ b/shelter/shelter.html
@@ -91,11 +91,42 @@
                             <span class="name">Woody</span>
                             <button class="learn_more">Learn more</button>
                         </div>
+                        <div class="slider_item">
+                            <img src="img/pets-sophia.png" alt="pet_sophia" class="card">
+                            <span class="name">Sophia</span>
+                            <button class="learn_more">Learn more</button>
+                        </div>
+                        <div class="slider_item">
+                            <img src="img/pets-timmy.png" alt="pet_timmy" class="card">
+                            <span class="name">Timmy</span>
+                            <button class="learn_more">Learn more</button>
+                        </div>
+                        <div class="slider_item">
+                            <img src="img/pets-charly.png" alt="pet_charly" class="card">
+                            <span class="name">Charly</span>
+                            <button class="learn_more">Learn more</button>
+                        </div>
+                        <div class="slider_item">
+                            <img src="img/pets-scarlet.png" alt="pet_scarlet" class="card">
+                            <span class="name">Scarlett</span>
+                            <button class="learn_more">Learn more</button>
+                        </div>
+                        <div class="slider_item">
+                            <img src="img/pets-freddie.png" alt="pet_freddie" class="card">
+                            <span class="name">Freddie</span>
+                            <button class="learn_more">Learn more</button>
+                        </div>
                         <button class="arrow_forward">
                             <img src="img/arrow_forward.svg" alt="button_arrow_forward" class="arrow button_arrow_forward">
                         </button>
+                        <!-- <div class="pop_up">
+                            <div class="pop_up_container">
+                                <div class="pop_up_body"></div>
+                            </div>
+                        </div>   -->
                     </div>
                     <a href="pets.html" class="rest_pets">Get to know the rest</a>
+                    
                 </div>
             </section>
             <section class="help" id="help">
